--- a/app/templates/patient_user/previous_gad.html
+++ b/app/templates/patient_user/previous_gad.html
@@ -3,9 +3,55 @@
 {% block content %}
 
 <div class="container">
+    <div class="row mb-3 mt-3">
+        <div class="col-6 md-12 sm-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Latest Recorded Scores </h3>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-6">
+                            <h5> Latest Score Info </h5>
+                        </div>
+                        <div class="col-6">
+                            <h5> Latest Emotional State Info </h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6 md-12 sm-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Previous GAD-7 Scores </h3>
+                </div>
+                <div class="card-body">
+                    <canvas id="score_graph_canvas"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
-        <div class="col-12">
-            <h3> Previous GAD </h3>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Previous Attempts/Score Information </h3>
+                </div>
+                <div class="card-body">
+                    <p> Some info on scoring system I guess </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Previous Captured Emotional States </h3>
+                </div>
+                <div class="card-body">
+                    <canvas id="emotional_state_graph_canvas"></canvas>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -17,10 +63,17 @@
 <script src="{{ url_for('static', filename='js/visualisations/line_graph.js') }}"></script>
 
 <script>
-    var ctx = document.getElementById('line_graph_canvas').getContext('2d');
-    var emotion_data = {{ most_recent_session_emotions | tojson }};
+    var graph_labels = {{ graph_labels | tojson }};
+    var label_type = "GAD-7 Scores"
 
-    (ctx, emotion_data);
+    var score_ctx = document.getElementById('score_graph_canvas').getContext('2d');
+    var score_data = {{ score_data  | tojson }};
+    createScoreGraph(score_ctx, graph_labels, score_data, label_type);
+
+    var emotional_state_ctx = document.getElementById('emotional_state_graph_canvas');
+    var emotional_state_data = {{ emotional_state_data | tojson }};
+    createEmotionalStateGraph(emotional_state_ctx, graph_labels, emotional_state_data);
+
 </script>
 
 {% endblock %}
