--- a/app/templates/patient_user/specific_session_page.html
+++ b/app/templates/patient_user/specific_session_page.html
@@ -10,28 +10,13 @@
                     <h3> Session Information </h3>
                 </div>
                 <div class="card-body">
+                    <p> Session Therapist: </p>
                     <p> Total Emotion Instances: {{ total_emotions }} </p>
                     <p> Session start time: </p>
                     <p> Session End Time: {{ session.time_of_session.strftime('%H:%M:%S') }} </p>
                 </div>
             </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3> Session Emotional Distribution Chart </h3>
-                </div>
-                <div class="card-body">
-                    <div class="container" style="width: 330px; height: 350px;">
-                        <div class="col-12">
-                            <canvas id="emotions_distribution"></canvas>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
+            <div class="card mt-3">
                 <div class="card-header">
                     <h3> Session Emotions </h3>
                 </div>
@@ -52,6 +37,20 @@
                             {% endfor %}
                         </tbody>
                     </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3> Session Emotional Distribution Chart </h3>
+                </div>
+                <div class="card-body">
+                    <div class="container" style="width: 330px; height: 350px;">
+                        <div class="col-12">
+                            <canvas id="emotions_distribution"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
