--- a/app/templates/questionnaires/questionnaires_page.html
+++ b/app/templates/questionnaires/questionnaires_page.html
@@ -17,7 +17,7 @@
         <div class="col-12">
             <div class="p-5 text-center bg-light">
                 <h1 class="mb-3"> Mental Health Questionnaires </h1>
-                <h4> Conduct mental health questionnaires with the addition of emotional recognition technology.</h4>
+                <h4> Conduct mental health questionnaires with the addition of emotional recognition technology</h4>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <a href="{{ url_for('main.phq9_questionnaire') }}" class="btn btn-secondary">Take PHQ-9 Questionnaire </a>
+                    <a href="{{ url_for('main.phq9_questionnaire') }}" id="phq9" class="btn btn-secondary">Take PHQ-9 Questionnaire </a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <button type="button" class="btn btn-secondary"> Take GAD-7 Questionnaire </button>
+                    <a href="{{ url_for('main.gad7_questionnaire') }}" id="gad7" class="btn btn-secondary">Take GAD-7 Questionnaire </a>
                 </div>
             </div>
         </div>
@@ -95,32 +95,17 @@
 
 {% endblock %}
 
-<script>
-    document.addEventListener("click", startPHQ);
-    document.addEventListener("click", startGAD);
-
-    function startPHQ() {
-        fetch('/phq9_questionnaire', {
-            method: 'POST'
-        })
-    }
-
-    function startGAD() {
-        fetch('/gad7_questionnaire');
-    }
-</script>
-
 {% block scripts %}
-
-<script>
-    
-</script>
 
 {% if not therapist %}
 
 <script>
-    document.getElementById("start_gad").disabled = true;
-    document.getElementById("start_phq").disabled = true;
+    var phq9Buttion = document.getElementById("phq9");
+    var gad7Button = document.getElementById("gad7");
+
+    phq9Buttion.classList.add("disabled");
+    gad7Button.classList.add("disabled");
+
 </script>
 
 {% endif %}
