--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -13,6 +13,11 @@
                     <p> Explanation of emotions placeholder </p>
                 </div>
             </div>
+            <div class="card mt-5">
+                <div class="card-body">
+                    <h2>helloworld</h2>
+                </div>
+            </div>
         </div>
         <div class="col-6">
             <div class="card">
@@ -20,49 +25,9 @@
                     <h2> Emotional Distribution Chart </h2>
                 </div>
                 <div class="card-body">
-                    <canvas id="pieChartCanvas" width="640" height="480"></canvas>
-                </div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-body">
-                    <h2>helloworld</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3> card 1</h3>
-                </div>
-                <div class="card-body">
-                    <p> Card 1 sample text </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3> Card 2 </h3>
-                </div>
-                <div class="card-body">
-                    <p>Card 2 sample text</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    <h3> Card 3 </h3>
-                </div>
-                <div class="card-body">
-                    <p> Card 3 sample text </p>
+                    <div class="div" width="640" height="480">
+                        <canvas id="pieChartCanvas" ></canvas>
+                    </div>
                 </div>
             </div>
         </div>
