--- a/app/templates/patient_user/choose_therapist.html
+++ b/app/templates/patient_user/choose_therapist.html
@@ -1,17 +1,23 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+<style>
+    .square-box {
+        max-width: 1500px;
+        min-height: 400px;
+    }
+</style>
+
+{% endblock %}
+
 {% block content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <h2> </h2>
-        </div>
-    </div>
+<div class="container mt-4 justify-content-center align-items-center">
     <div class="row">
         <div class="col-6">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header align-text-center">
                     <h2>Choosing a Therapist</h2>
                 </div>
                 <div class="card-body">
@@ -25,30 +31,48 @@
             </div>
         </div>
         <div class="col-6">
-            <table id="therapist_table" class="cell-border">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Choose this Therapist?</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for therapist in therapist_list %}
-                    <tr>
-                        <td>{{ therapist.first_name + " " + therapist.surname }}</td>
-                        <td>{{ therapist.email }}</td>
-                        <td>
-                            <form id="choose_therapist_form" method = "POST" action="{{ url_for('main.assign_therapist') }}">
-                                <input type="number" name="patient" value="{{ current_patient }}" hidden>
-                                <input type="number" name="therapist" value="{{ therapist.id }}" hidden>
-                                <input type="submit" class="btn btn-secondary" value="Select Therapist"></button>
-                            </form>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            <div class="card">
+                <div class="card-header align-text-center">
+                    <h3> Currently Available Therapists </h3>
+                </div>
+                <div class="card-body">
+                    {% if therapist_list is not none %}
+                    <table id="therapist_table" class="cell-border">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Choose this Therapist?</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for therapist in therapist_list %}
+                            <tr>
+                                <td>{{ therapist.first_name + " " + therapist.surname }}</td>
+                                <td>{{ therapist.email }}</td>
+                                <td>
+                                    <form id="choose_therapist_form" method = "POST" action="{{ url_for('main.assign_therapist') }}">
+                                        <input type="number" name="patient" value="{{ current_patient }}" hidden>
+                                        <input type="number" name="therapist" value="{{ therapist.id }}" hidden>
+                                        <input type="submit" class="btn btn-secondary" value="Select Therapist"></button>
+                                    </form>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    {% else %}
+                    <p> 
+                        There are currently no therapists registered on the application. Therefore, there are currently no therapists 
+                        that you are able to register yourself with. 
+                    </p>
+                    <p>
+                        When a therapist registers themselves on the application they will appear here, where you will have the opportunity
+                        to register with them.
+                    </p>
+                    {% endif %}        
+                </div>
+            </div>
         </div>
     </div>
 </div>
