--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -6,22 +6,36 @@
     <div class="row mt-3">
         <div class="col-6 ">
             <div class="card">
-                <div class="card-header">
-                    <h2> Therapy Session Results </h2>
+                <div class="card-header text-center">
+                    <h2> Therapy Session Details </h2>
                 </div>
                 <div class="card-body">
-                    <p> Explanation of emotions placeholder </p>
+                    <div class="row">
+                        <div class="col-6">
+                            <p> Session Therapist: </p>
+                            <p> Total Images Captured: {{ total_images_captured }}</p>
+                            <p> Session Emotional State: </p>
+                        </div>
+                        <div class="col-6">
+                            <p> Session Start Time: </p>
+                            <p> Session End Time: </p>
+                            <p> Total Length of Session: </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card mt-5">
+                <div class="card-header text-center">
+                    <h3> Emotional State Information </h3>
+                </div>
                 <div class="card-body">
-                    <h2>helloworld</h2>
+                    <p> super duper depressed </p>
                 </div>
             </div>
         </div>
         <div class="col-6">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center">
                     <h2> Emotional Distribution Chart </h2>
                 </div>
                 <div class="card-body">
