--- a/app/templates/therapy/therapy_screen.html
+++ b/app/templates/therapy/therapy_screen.html
@@ -21,7 +21,7 @@
     <div class="row mt-3">
         <div class="col-6">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center align-middle">
                     <h3>Therapy Information</h3>
                 </div>
                 <div class="card-body">
@@ -42,7 +42,7 @@
                     </p>
                     {% endif %}
                 </div>
-                <div class="card-footer">
+                <div class="card-footer text-center align-middle">
                     <button type="button" id="start"  class="btn btn-secondary">Begin Session</button>
                     <a href="{{ url_for('main.therapy_results_page') }}" id="stop" class="btn btn-secondary">Stop Session</a>
                     <button type="button" id="sessionLength" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
@@ -57,7 +57,7 @@
         </div>
         <div class="col-6">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center align-middle">
                     <h3> Webcam Feed </h3>
                 </div>
                 <div class="card-body">
