More functionality aded. Added json files with messages and generally cleaned up some database logic

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -97,7 +97,7 @@
                 </button>
             </div>
         </div>
-        {% else %}
+        {% elif category == 'success' %}
         <div class="alert alert-success alter-dismissible fade show" role="alert">
             <div class="d-flex justify-content-between align-items-center">
                 <span> {{ message }}</span>
