--- a/app/templates/errors/401.html
+++ b/app/templates/errors/401.html
@@ -3,7 +3,16 @@
 {% block content %}
 
 <div class="container">
-    <h2> 401 </h2>
+    <div class="card">
+        <div class="card-header">
+            <h3> 401 Error Encountered </h3>
+        </div>
+        <div class="card-body">
+            <p> 
+                A 401 error has been encountered, meaning you are not authorised to view this webpage. Please press the button below to return to the applications landing page.
+            </p>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
