--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -3,7 +3,19 @@
 {% block content %}
 
 <div class="container">
-    <h2> 500 </h2>
+    <div class="card">
+        <div class="card-header">
+            <h3> 500 Error Encountered </h3>
+        </div>
+        <div class="card-body">
+            <p>
+                A 500 error has been encountered, meaning the application has encountred an internal server error. Press the button below to return to the applications landing page.
+            </p>
+        </div>
+        <div class="card-footer">
+            <button type="button" class="btn btn-secondary">Help Me</button>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
