--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,8 +2,20 @@
 
 {% block content %}
 
-<div class="container">
-    <h2> 404 </h2>
+<div class="container mt-3">
+    <div class="card">
+        <div class="card-header">
+            <h3> 404 Error Encountered </h3>
+        </div>
+        <div class="card-body">
+            <p>
+                A 404 error has been encountered, meaning the designated webpage cannot be found. Press the button below to return to the applications landing page.
+            </p>
+        </div>
+        <div class="card-footer">
+            <a href="{{ url_for('main.landing_page') }}"> Go Back to Landing Page </a>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
