--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -18,4 +18,12 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-6 mt-3">
+            
+        </div>
+    </div>
+</div>
+
 {% endblock %}
