--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -69,9 +69,7 @@
                 <div class="card-body">
                     {% if most_recent_session %}
                     <h5> Session Emotional State: {{ most_recent_session.emotional_state }}</h5>
-                    <div class="container d-flex justify-content-center" style="position: relative; height:35vh; width: 80vw;">
-                        <canvas id="recent_session_pie_chart"></canvas>
-                    </div>
+                        <canvas id="recent_session_pie_chart" width="100" height="100" style="border:1px solid;"></canvas>
                     {% else %}
                     <p> No data currently available to view as no therapy sessions have been conducted as of yet.</p>
                     {% endif %}
