--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -21,7 +21,10 @@
 <div class="container">
     <div class="row">
         <div class="col-6 mt-3">
-            
+            <h4> Emotional Recognition Capability </h4>
+            <p> 
+                This application aims to use an emotional recognition model in order to provide additional insight into mental health.
+            </p>
         </div>
     </div>
 </div>
