--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -13,7 +13,7 @@
             </p>
         </div>
         <div class="card-footer">
-            <a href="{{ url_for('main.landing_page') }}"> Go Back to Landing Page </a>
+            <a href="{{ url_for('main.landing_page') }}">Landing Page</a>
         </div>
     </div>
 </div>
