--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -18,9 +18,9 @@
 
 <div class="container justify-content-center align-items-center mt-3">
     <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12">
             <div class="card">
-                <div class="card-header" style="width: 100%">
+                <div class="card-header text-center" style="width: 100%">
                     <h3> PHQ-9 Score Results </h3>
                 </div>
                 <div class="card-body">
@@ -28,18 +28,18 @@
                     <p> {{ phq_message }} </p>
                 </div>
             </div>
-            <div class="card mt-2">
-                <div class="card-header">
+            <div class="card mt-3">
+                <div class="card-header text-center">
                     <h3> Emotional State Results </h3>
                 </div>
                 <div class="card-body">
-                    <p> Your captured emotional state during the questionnaire was {{ emotional_state }}.</p>
+                    <h5> Emotional State Captured: {{ emotional_state }}</h5>
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12 mt-lg-0 mt-sm-3">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center">
                     <h3> Emotional Distribution Chart </h3>
                 </div> 
                 <div class="card-body">
